; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/mangling/extr_demangler.c_create_demangler.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/mangling/extr_demangler.c_create_demangler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@eDemanglerErrOK = common dso_local global i32 0, align 4
@eDemanglerErrMemoryAllocation = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_demangler(%struct.TYPE_3__** %0) #0 {
  %2 = alloca %struct.TYPE_3__**, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__** %0, %struct.TYPE_3__*** %2, align 8
  %4 = load i32, i32* @eDemanglerErrOK, align 4
  store i32 %4, i32* %3, align 4
  %5 = call i64 @malloc(i32 16)
  %6 = inttoptr i64 %5 to %struct.TYPE_3__*
  %7 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %2, align 8
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %7, align 8
  %8 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %2, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @eDemanglerErrMemoryAllocation, align 4
  store i32 %12, i32* %3, align 4
  br label %20

13:                                               ; preds = %1
  %14 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %2, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  store i64 0, i64* %16, align 8
  %17 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %2, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store i64 0, i64* %19, align 8
  br label %20

20:                                               ; preds = %13, %11
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
